# MACD

./: console.txt  main.py  pyproject.toml  test.py
multi_objective_debate/: agent.py  config.py  model.py  preset.py  prompts.py
tests/: __init__.py
