[tool.poetry]
name = "multi-objective-debate"
version = "0.1.0"
description = ""
authors = ["observer <wozluohd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.0.20"
python-dotenv = "^1.0.1"
langchain = "^0.1.4"
langchain-openai = "^0.0.5"
tavily-python = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
